[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_ghauser8"
version = "0.0.1"
authors = [
	{ name="Greg Hauser", email="ghauser8@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
